--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/npm/cli.git"
+    "url": "https://github.com/sertlab/next-gen-js.git"
   }
 }
