--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,18 +3,21 @@
     "display": "Node 18",
   
     "compilerOptions": {
-      "lib": ["es2022"],
       "module": "commonjs",
-      "target": "es2022",
-  
+      "target": "es5",
+      "moduleResolution": "node",
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
-  
-      "outDir": "lib",
-      "declaration": true
+      "outDir": "./dist",
+      "rootDir": "./src",
+      "declaration": true,
+      "lib": [
+        "es7",
+        "dom"
+      ]
     },
-  
-    "include": ["**/*"]
+    "include": ["src/**/*.ts"],
+    "exclude": ["dist"]
   }
