--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "dependencies": {
     "@oclif/core": "^1.22.0",
     "@oclif/plugin-help": "^5",
-    "@oclif/plugin-plugins": "^2.1.8"
+    "@oclif/plugin-plugins": "^2.1.8",
+    "inquirer": "^8.2.5"
   },
   "devDependencies": {
     "@oclif/test": "^2.2.15",
     "@types/chai": "^4",
+    "@types/inquirer": "^8.2.5",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.18.10",
     "chai": "^4",
