--- a/package.json
+++ b/package.json
@@ -5,9 +5,20 @@
   "license": "MIT",
   "description": "Winning project for hackweek 2022",
   "scripts": {
-    "build": "tsc"
+    "build": "npm run build:types && npm run build:js",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "babel src --out-dir dist --extensions \".ts,.tsx,.js,.jsx\"  --source-maps inline"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/node": "^18.11.17",
+    "babel-plugin-replace-require-function": "^0.0.2",
     "typescript": "^4.9.4"
   },
   "repository": {
