--- a/.babelrc
+++ b/.babelrc
@@ -1,21 +1,12 @@
 {
     "presets": [
-        "@babel/preset-env", 
-        "@babel/preset-typescript",
-        
+        ["@babel/env"], 
+        "@babel/preset-typescript"
     ],
     "plugins": [
       "@babel/plugin-proposal-class-properties",
       "@babel/plugin-proposal-object-rest-spread",
-      [
-        "replace-require-function", {
-          "filenames": [
-            "tracker.js",
-            "util.js"
-          ],
-          "newRequire": "window.cep_node.require"
-        }
-      ]
+      "add-module-exports",
+      "requirejs-babel-plugin"
     ]
-
 }
