--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@theunacceptables/next-gen-js",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "description": "Winning project for hackweek 2022",
   "scripts": {
+    "TS": "tsc ",
     "build": "npm run build:types && npm run build:js",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
@@ -12,13 +13,14 @@
     "build:js": "babel src --out-dir dist --extensions \".ts,.tsx,.js,.jsx\"  --source-maps inline"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.3",
-    "@babel/core": "^7.8.3",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.5",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-typescript": "^7.8.3",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/node": "^18.11.17",
     "babel-plugin-replace-require-function": "^0.0.2",
+    "requirejs-babel-plugin": "^0.5.0",
     "typescript": "^4.9.4"
   },
   "repository": {
