--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,6 +6,7 @@
       "outDir": "dist.node",
       "moduleResolution": "node",
       "baseUrl": "src",
+      "declaration": true,
       "paths": {
         "src/*": ["./*"]
       },
