--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
+    "@types/dompurify": "^2.4.0",
     "@types/node": "^18.11.17",
     "typescript": "^4.9.4"
   },
