--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,13 @@
     "strict": true,
     "target": "es2019"
   },
+  "assets":[
+    "**/src/templates/*"
+  ],
   "include": [
     "src/**/*"
+  ],
+  "exclude": [
+    "**/src/templates/*"
   ]
 }
